--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,13 +2,13 @@ name: Deploy PROD Migrations
 
 on:
   push:
-    branches: [main]
+    branches: [master]
     paths:
       - 'index.js'
       - 'package.json'
-  workflow_dispatch:
-  repository_dispatch:
-    types: [new-migration]
+      - 'migrations/**'
+      - 'sync-migrations.ps1'
+  workflow_dispatch
 
 jobs:
   deploy-and-migrate:
@@ -18,23 +18,8 @@ jobs:
       contents: read
     
     steps:
-      - name: Checkout db-migration-lambda code
+      - name: Checkout code
         uses: actions/checkout@v4
-      
-      - name: Checkout kshipra-db for migrations
-        uses: actions/checkout@v4
-        with:
-          repository: kshipra-ai/kshipra-db
-          path: kshipra-db
-          token: ${{ secrets.GITHUB_TOKEN }}
-      
-      - name: Sync migrations from kshipra-db
-        run: |
-          echo "🔄 Syncing migrations from kshipra-db..."
-          rm -rf migrations/*.sql
-          cp kshipra-db/flyway/sql/V*.sql migrations/
-          echo "✅ Copied $(ls migrations/V*.sql | wc -l) migration files"
-          ls -lh migrations/V*.sql | tail -5
       
       - name: Setup Node.js
         uses: actions/setup-node@v4
