--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,13 +2,13 @@ name: Deploy PROD Migrations
 
 on:
   push:
-    branches: [master]
+    branches: [ master ]
     paths:
       - 'index.js'
       - 'package.json'
       - 'migrations/**'
       - 'sync-migrations.ps1'
-  workflow_dispatch
+  workflow_dispatch:
 
 jobs:
   deploy-and-migrate:
