--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ on:
       - 'package.json'
       - 'migrations/**'
       - 'sync-migrations.ps1'
-  workflow_dispatch:
+  workflow_dispatch
 
 jobs:
   deploy-and-migrate:
