--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "powershell -File build.ps1"
   },
   "dependencies": {
+    "@aws-sdk/client-lambda": "^3.980.0",
     "pg": "^8.13.1"
   }
 }
